--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -16,16 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: chainguard-dev/actions/setup-melange@main
-      
-      - uses: chainguard-dev/actions/melange-keygen@main
-      
       - uses: chainguard-dev/actions/melange-build@main
         with: 
-          multi-config: ${{ github.workspace }}/tools/checkov.yaml, ${{ github.workspace }}/tools/semgrep.yaml
+          multi-config: ${{ github.workspace }}/tools/semgrep.yaml
           archs: x86_64
-          signing-key-path: ${{ github.workspace }}/melange.rsa
-          repository-path: ${{ github.workspace }}/packages
+          
+      - uses: chainguard-dev/actions/melange-build@main
+        with: 
+          multi-config: ${{ github.workspace }}/tools/checkov.yaml
+          archs: x86_64
           
       - uses: chainguard-dev/actions/apko-build@main
         with:
