--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -33,7 +33,15 @@ jobs:
           
       - uses: chainguard-dev/actions/melange-build-pkg@main
         with: 
-          multi-config: tools/semgrep.yaml,tools/checkov.yaml
+          config: tools/checkov.yaml
+          archs: x86_64
+          sign-with-temporary-key: false
+          signing-key-path: ${{ github.workspace }}/melange.rsa
+          repository-path: ${{ github.workspace }}/packages
+      
+      - uses: chainguard-dev/actions/melange-build-pkg@main
+        with: 
+          config: tools/semgrep.yaml
           archs: x86_64
           sign-with-temporary-key: false
           signing-key-path: ${{ github.workspace }}/melange.rsa
