--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/semgrep.yaml, ${{ github.workspace }}/tools/checkov.yaml
-          archs: x86_64, amd64
+          archs: x86_64
           sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
           repository-path: ${{ github.workspace }}/packages
@@ -38,8 +38,10 @@ jobs:
           workdir: ''
         
       - name: build and push image
-        uses: chainguard-dev/actions/apko-build@main
+        uses: distroless/actions/apko-publish@main
         with:
           config: apko.yaml
-          archs: x86_64, amd64
+          archs: x86_64
           tag: ghcr.io/ahmetak4n/security-tool-box:latest
+          keyring-append: ${{ github.workspace }}/melange.rsa.pub
+          repository-append: ${{ github.workspace }}/packages
