--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/semgrep.yaml, ${{ github.workspace }}/tools/checkov.yaml
-          archs: x86_64
+          archs: amd64
           sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
           repository-path: ${{ github.workspace }}/packages
@@ -37,11 +37,15 @@ jobs:
           empty-workspace: false
           workdir: ''
         
+      - name: ASD
+        run: |
+          ls -al
+          
       - name: build and push image
         uses: distroless/actions/apko-publish@main
         with:
           config: apko.yaml
-          archs: x86_64
+          archs: amd64
           tag: ghcr.io/ahmetak4n/security-tool-box:latest
           keyring-append: ${{ github.workspace }}/melange.rsa.pub
           repository-append: ${{ github.workspace }}/packages
