--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/semgrep.yaml, ${{ github.workspace }}/tools/checkov.yaml
-          archs: amd64
+          archs: x86_64
           sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
           repository-path: ${{ github.workspace }}/packages
@@ -40,12 +40,14 @@ jobs:
       - name: ASD
         run: |
           ls -al
+          ls -al packages/
           
       - name: build and push image
         uses: distroless/actions/apko-publish@main
         with:
           config: apko.yaml
-          archs: amd64
+          archs: x86_64
+          debug: true
           tag: ghcr.io/ahmetak4n/security-tool-box:latest
           keyring-append: ${{ github.workspace }}/melange.rsa.pub
           repository-append: ${{ github.workspace }}/packages
