--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/semgrep.yaml, ${{ github.workspace }}/tools/checkov.yaml
-          archs: x86_64
+          archs: amd64
           sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
           repository-path: ${{ github.workspace }}/packages
@@ -41,8 +41,6 @@ jobs:
         uses: distroless/actions/apko-build@main
         with:
           config: apko.yaml
-          archs: x86_64
-          debug: true
-          use-docker-mediatypes: false
+          archs: amd64
           tag: ghcr.io/ahmetak4n/security-tool-box:latest
           repository-append: ${{ github.workspace }}/packages
