--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -13,6 +13,10 @@ jobs:
   build:
     name: build and push
     runs-on: ubuntu-latest
+    
+    permissions:
+      packages: write
+      contents: read
 
     steps:
       - name: checkot repository
