--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -3,6 +3,9 @@ name: build-ci
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - 'README.md'
+      - '.github/*'
   pull_request:
     branches: [ "main" ]
     
