--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - 'README.md'
-      - '.github/*'
+      - '.github/workflows/*'
   pull_request:
     branches: [ "main" ]
     
