--- a/tools/amass.yaml
+++ b/tools/amass.yaml
@@ -5,7 +5,6 @@ package:
   description: "attack surfaces and external asset discovery tools set"
   copyright:
     - license: Apache-2.0
-
 environment:
   contents:
     repositories:
@@ -14,9 +13,9 @@ environment:
       - https://packages.wolfi.dev/os/wolfi-signing.rsa.pub
     packages:
       - go
-
 pipeline:
   - uses: go/install
     with:
       package: github.com/owasp-amass/amass/v3/...
       version: v${{package.version}}
+  - uses: strip
