--- a/tools/jwt-tool.yaml
+++ b/tools/jwt-tool.yaml
@@ -8,7 +8,6 @@ package:
   dependencies:
     runtime:
       - python3
-
 environment:
   contents:
     repositories:
@@ -19,7 +18,6 @@ environment:
       - python3
       - py3-pip
       - wolfi-base
-
 pipeline:
   - uses: git-checkout
     with:
@@ -28,16 +26,17 @@ pipeline:
       destination: jwt-tool
   - runs: |
       mkdir -p ${{targets.destdir}}/opt/venvs/jwt-tool
-      
+
       mv jwt-tool ${{targets.destdir}}/opt/venvs && cd ${{targets.destdir}}/opt/venvs/jwt-tool
 
       pip3 install pipenv
-      export PIPENV_VENV_IN_PROJECT=1 
+      export PIPENV_VENV_IN_PROJECT=1
       pipenv install termcolor cprint pycryptodomex requests
-     
+
       JWT_TOOL_PYTHON_PATH="#!/opt/venvs/jwt-tool/.venv/bin/python"
       sed -i "1s,.*,$JWT_TOOL_PYTHON_PATH," jwt_tool.py
 
       chmod +x jwt_tool.py
 
       mkdir -p ${{targets.destdir}}/usr/bin && ln -s /opt/venvs/jwt-tool/jwt_tool.py ${{targets.destdir}}/usr/bin/jwt-tool
+  - uses: strip
