--- a/tools/semgrep.yaml
+++ b/tools/semgrep.yaml
@@ -8,7 +8,6 @@ package:
   dependencies:
     runtime:
       - python3
-
 environment:
   contents:
     repositories:
@@ -21,7 +20,7 @@ environment:
       - wolfi-base
 pipeline:
   - runs: |
-      mkdir -p ${{targets.destdir}}/opt/venvs/semgrep && cd ${{targets.destdir}}/opt/venvs/semgrep  
+      mkdir -p ${{targets.destdir}}/opt/venvs/semgrep && cd ${{targets.destdir}}/opt/venvs/semgrep
 
       pip3 install pipenv
       export PIPENV_VENV_IN_PROJECT=1
@@ -31,4 +30,4 @@ pipeline:
       sed -i "1s,.*,$SEMGREP_PYTHON_PATH," .venv/bin/semgrep
 
       mkdir -p ${{targets.destdir}}/usr/bin && ln -s /opt/venvs/semgrep/.venv/bin/semgrep ${{targets.destdir}}/usr/bin/semgrep
-  
+  - uses: strip
