--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/amass.yaml, ${{ github.workspace }}/tools/exploitdb.yaml,
-            ${{ github.workspace }}/tools/jwt-tool.yaml, ${{ github.workspace }}/tools/nmap.yaml, ${{ github.workspace }}/tools/nuclei.yaml,
+            ${{ github.workspace }}/tools/jwt-tool.yaml, ${{ github.workspace }}/tools/nuclei.yaml,
             ${{ github.workspace }}/tools/semgrep.yaml, ${{ github.workspace }}/tools/sqlmap.yaml, ${{ github.workspace }}/tools/gobuster.yaml 
           archs: x86_64
           sign-with-temporary-key: true
