--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           config: stb-red.yaml
           archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ steps.meta.outputs.version }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ GITHUB_SHA }}
           repository-append: packages
           keyring-append: melange.rsa.pub
           use-docker-mediatypes: false
@@ -84,7 +84,7 @@ jobs:
         with:
           config: stb-green.yaml
           archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ steps.meta.outputs.version }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ GITHUB_SHA }}
           repository-append: packages
           keyring-append: melange.rsa.pub
           use-docker-mediatypes: false
