--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           config: stb-red.yaml
           archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ steps.meta.outputs.version }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red
           repository-append: packages
           keyring-append: melange.rsa.pub
           use-docker-mediatypes: false
@@ -83,7 +83,7 @@ jobs:
         with:
           config: stb-green.yaml
           archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ steps.meta.outputs.version }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green
           repository-append: packages
           keyring-append: melange.rsa.pub
           use-docker-mediatypes: false
