--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -29,8 +29,7 @@ jobs:
         uses: chainguard-dev/actions/melange-build@main
         with:
           config: ''
-          multi-config: ${{ github.workspace }}/tools/amass.yaml, ${{ github.workspace }}/tools/exploitdb.yaml,
-            ${{ github.workspace }}/tools/jwt-tool.yaml, ${{ github.workspace }}/tools/semgrep.yaml
+          multi-config: ${{ github.workspace }}/tools/amass.yaml, ${{ github.workspace }}/tools/exploitdb.yaml, ${{ github.workspace }}/tools/jwt-tool.yaml, ${{ github.workspace }}/tools/semgrep.yaml
           archs: x86_64
           sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
