--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -26,14 +26,15 @@ jobs:
         uses: actions/checkout@v3
         
       - uses: chainguard-dev/actions/setup-melange@main
+      
+      - uses: chainguard-dev/actions/melange-keygen@main
         
       - name: build apk packages
-        uses: chainguard-dev/actions/melange-build@main
+        uses: chainguard-dev/actions/melange-build-pkg@main
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/semgrep.yaml 
           archs: x86_64
-          sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
           repository-path: ${{ github.workspace }}/packages
           repository-append: ${{ github.workspace }}/packages
