--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -5,8 +5,9 @@ on:
     types: [ created ]
     
 jobs:
-  red-build:
-    name: stb red
+
+  build:
+    name: build
     runs-on: ubuntu-latest
     
     permissions:
@@ -20,52 +21,14 @@ jobs:
       # will be remove
       - name: create apk keys folder
         run: |
-          echo ${{ github.ref }}
+          sudo mkdir -p /etc/apk/keys
         
-      - name: build apk packages
+      - name: build all apk packages
         uses: chainguard-dev/actions/melange-build@main
         with:
           config: ''
           multi-config: ${{ github.workspace }}/tools/amass.yaml, ${{ github.workspace }}/tools/exploitdb.yaml,
-            ${{ github.workspace }}/tools/jwt-tool.yaml, ${{ github.workspace }}/tools/nuclei.yaml, ${{ github.workspace }}/tools/semgrep.yaml, 
-            ${{ github.workspace }}/tools/nuclei.yaml
-          archs: x86_64
-          sign-with-temporary-key: true
-          signing-key-path: ${{ github.workspace }}/melange.rsa
-          repository-path: ${{ github.workspace }}/packages
-          repository-append: ${{ github.workspace }}/packages
-          keyring-append: ''
-          namespace: ''
-          empty-workspace: false
-          workdir: ''
-          
-      - name: build and push image
-        uses: distroless/actions/apko-publish@main
-        with:
-          config: stb-red.yaml
-          archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ steps.meta.outputs.version }}
-          repository-append: packages
-          keyring-append: melange.rsa.pub
-          use-docker-mediatypes: false
-
-  green-build:
-    name: stb green
-    runs-on: ubuntu-latest
-    
-    permissions:
-      packages: write
-      contents: read
-
-    steps:
-      - name: checkot repository
-        uses: actions/checkout@v3
-        
-      - name: build apk packages
-        uses: chainguard-dev/actions/melange-build@main
-        with:
-          config: ''
-          multi-config: ${{ github.workspace }}/tools/semgrep.yaml 
+            ${{ github.workspace }}/tools/jwt-tool.yaml, ${{ github.workspace }}/tools/semgrep.yaml
           archs: x86_64
           sign-with-temporary-key: true
           signing-key-path: ${{ github.workspace }}/melange.rsa
@@ -76,12 +39,22 @@ jobs:
           empty-workspace: false
           workdir: ''
         
-      - name: build and push image
+      - name: green build and push image
         uses: distroless/actions/apko-publish@main
         with:
           config: stb-green.yaml
           archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ steps.meta.outputs.version }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}}
+          repository-append: packages
+          keyring-append: melange.rsa.pub
+          use-docker-mediatypes: false
+      
+      - name: red build and push image
+        uses: distroless/actions/apko-publish@main
+        with:
+          config: stb-red.yaml
+          archs: x86_64
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red-${{github.ref_name}}
           repository-append: packages
           keyring-append: melange.rsa.pub
           use-docker-mediatypes: false
